5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1800_2573.log
== SUBMITION (2019-06-13 09:56:51) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35 <= max(b) <= 39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.01428
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
MASSA: alt: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
MASSA: alt: [37.79 31.88]
O MAIOR IMC DA TURMA EH 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:57:05) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
elif(35 <= max(b) <= 39.99):
-- EXECUTION TIME:
0.558732
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 27
    
                                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:57:21) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)>=40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
0.911197
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
MASSA: alt: [ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
MASSA: alt: [37.79 31.88]
O MAIOR IMC DA TURMA EH 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:57:54) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)<40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.01738
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:59:54) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)<40):
	print("OBESIDADE MORBIDA")
-- EXECUTION TIME:
1.29862
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:00:03) 
-- CODE:
from numpy import*
p = array(eval(input("MASSA: ")))
a = array(eval(input("alt: ")))
n = size(p)
b = zeros(n)
i = 0
for x in p:
	b[i] = round((x/a[i]**2),2)
	i += 1
print(b)
print("O MAIOR IMC DA TURMA EH",max(b))
if(max(b)<17):
	print("MUITO BAIXO DO PESO")
elif(17<max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<= 29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<= 34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(b)<40):
	print("OBESIDADE MORBIDA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
